--- a/Proiect/AddWindow.xaml
+++ b/Proiect/AddWindow.xaml
@@ -1,17 +1,79 @@
 ﻿<Window x:Class="Proiect.AddWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Add New Record" Height="200" Width="400">
-	<StackPanel Margin="10">
-		<TextBlock Text="Nume Client:" />
-		<TextBox Name="NumeClientTextBox" />
+        Title="Add New RCA Record" Height="600" Width="400">
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <StackPanel Margin="10">
+            <TextBlock Text="Data Expirare Polita:" />
+            <TextBox Name="DataExpirarePolitaTextBox" />
 
-		<TextBlock Text="Suma:" Margin="0,10,0,0" />
-		<TextBox Name="SumaTextBox" />
+            <TextBlock Text="Numar Inmatriculare:" Margin="0,10,0,0" />
+            <TextBox Name="NumarInmatriculareTextBox" />
 
-		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-			<Button Content="OK" Width="75" Margin="5" Click="OKButton_Click" />
-			<Button Content="Cancel" Width="75" Margin="5" Click="CancelButton_Click" />
-		</StackPanel>
-	</StackPanel>
+            <TextBlock Text="Serie Sasiu:" Margin="0,10,0,0" />
+            <TextBox Name="SerieSasiuTextBox" />
+
+            <TextBlock Text="CNP/CUI:" Margin="0,10,0,0" />
+            <TextBox Name="CnpCuiTextBox" />
+
+            <TextBlock Text="Nume:" Margin="0,10,0,0" />
+            <TextBox Name="NumeTextBox" />
+
+            <TextBlock Text="Prenume:" Margin="0,10,0,0" />
+            <TextBox Name="PrenumeTextBox" />
+
+            <TextBlock Text="Judet:" Margin="0,10,0,0" />
+            <TextBox Name="JudetTextBox" />
+
+            <TextBlock Text="Localitate:" Margin="0,10,0,0" />
+            <TextBox Name="LocalitateTextBox" />
+
+            <TextBlock Text="Adresa:" Margin="0,10,0,0" />
+            <TextBox Name="AdresaTextBox" />
+
+            <TextBlock Text="Data Obtinere Permis:" Margin="0,10,0,0" />
+            <TextBox Name="DataObtinerePermisTextBox" />
+
+            <TextBlock Text="Marca:" Margin="0,10,0,0" />
+            <TextBox Name="MarcaTextBox" />
+
+            <TextBlock Text="Capacitate Cilindrica:" Margin="0,10,0,0" />
+            <TextBox Name="CapacitateCilindricaTextBox" />
+
+            <TextBlock Text="Numar Locuri:" Margin="0,10,0,0" />
+            <TextBox Name="NrLocuriTextBox" />
+
+            <TextBlock Text="Masa Maxima Autorizata:" Margin="0,10,0,0" />
+            <TextBox Name="MasaMaximaAutorizataTextBox" />
+
+            <TextBlock Text="Putere Motor (kW):" Margin="0,10,0,0" />
+            <TextBox Name="PutereMotorKwTextBox" />
+
+            <TextBlock Text="Tip Combustibil:" Margin="0,10,0,0" />
+            <TextBox Name="TipCombustibilTextBox" />
+
+            <TextBlock Text="Model:" Margin="0,10,0,0" />
+            <TextBox Name="ModelTextBox" />
+
+            <TextBlock Text="Serie CIV:" Margin="0,10,0,0" />
+            <TextBox Name="SerieCivTextBox" />
+
+            <TextBlock Text="An Fabricatie:" Margin="0,10,0,0" />
+            <TextBox Name="AnFabricatieTextBox" />
+
+            <TextBlock Text="Numar Kilometri:" Margin="0,10,0,0" />
+            <TextBox Name="NrKmTextBox" />
+
+            <TextBlock Text="Data Primei Inmatriculari:" Margin="0,10,0,0" />
+            <TextBox Name="DataPrimeiInmatriculariTextBox" />
+
+            <TextBlock Text="Data Expirare ITP:" Margin="0,10,0,0" />
+            <TextBox Name="DataExpirareITPTextBox" />
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+                <Button Content="OK" Width="75" Margin="5" Click="OKButton_Click" />
+                <Button Content="Cancel" Width="75" Margin="5" Click="CancelButton_Click" />
+            </StackPanel>
+        </StackPanel>
+    </ScrollViewer>
 </Window>
