--- a/Proiect/MainWindow.xaml
+++ b/Proiect/MainWindow.xaml
@@ -19,7 +19,7 @@
             <Button x:Name="LocuinteButton" Click="LocuinteButton_Click" Content="LOCUINTE" Background="#FFC2C2BB" Width="150" Margin="0,10" Height="45"/>
         </StackPanel>
         <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="397" VerticalAlignment="Top" Width="642" Margin="158,37,0,0">
-            <DataGrid x:Name="DataGrid" AutoGenerateColumns="True" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="-1,-1,0,0" SelectionChanged="DataGrid_SelectionChanged"/>
+            <DataGrid x:Name="DataGrid" AutoGenerateColumns="True" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="-1,-1,0,0" SelectionChanged="DataGrid_SelectionChanged" Background="#FFE9E9E9" Foreground="Black" BorderBrush="Black" FontFamily="Times New Roman" FontSize="11"/>
         </Border>
     </Grid>
 </Window>
