--- a/Proiect/MainWindow.xaml
+++ b/Proiect/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Proiect"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Background="#FF444444" Foreground="Black" ResizeMode="NoResize">
+        Title="MainWindow" Height="500" Width="1000" Background="#FF444444" Foreground="Black" ResizeMode="NoResize">
     <Grid>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="158,-38,0,338" Width="640">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="158,-60,0,360" Width="840">
             <Button Click="AdaugaButton_Click" Content="ADAUGA" Background="#FFC2C2BB" Width="128" Margin="0,10" Height="40"/>
             <Button Click="EditeazaButton_Click" Content="EDITEAZA" Background="#FFC2C2BB" Width="129" Margin="0,10" Height="40"/>
             <Button Click="CautaButton_Click" Content="CAUTA" Background="#FFC2C2BB" Width="128" Margin="0,10" Height="40"/>
@@ -18,8 +18,8 @@
             <Button x:Name="RcaButton" Click="RcaButton_Click" Content="RCA" Background="#FFC2C2BB" Width="150" Margin="0,10" Height="48"/>
             <Button x:Name="LocuinteButton" Click="LocuinteButton_Click" Content="LOCUINTE" Background="#FFC2C2BB" Width="150" Margin="0,10" Height="45"/>
         </StackPanel>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="397" VerticalAlignment="Top" Width="642" Margin="158,37,0,0">
-            <DataGrid x:Name="DataGrid" AutoGenerateColumns="True" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="-1,-1,0,0" SelectionChanged="DataGrid_SelectionChanged" Background="#FFE9E9E9" Foreground="Black" BorderBrush="Black" FontFamily="Times New Roman" FontSize="11"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="447" VerticalAlignment="Top" Width="840" Margin="158,37,0,0">
+            <DataGrid x:Name="DataGrid" AutoGenerateColumns="True" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="-8,-1,0,-1" SelectionChanged="DataGrid_SelectionChanged" Background="#FFE9E9E9" Foreground="Black" BorderBrush="Black" FontFamily="Times New Roman" FontSize="11" HorizontalAlignment="Left" Width="847"/>
         </Border>
     </Grid>
 </Window>
