--- a/Proiect/MainWindow.xaml
+++ b/Proiect/MainWindow.xaml
@@ -6,6 +6,13 @@
         xmlns:local="clr-namespace:Proiect"
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="1000" Background="#FF444444" Foreground="Black" ResizeMode="NoResize">
+	<Window.Resources>
+		<Style x:Key="HighlightedButtonStyle" TargetType="Button">
+			<Setter Property="Background" Value="LightBlue"/>
+			<Setter Property="BorderBrush" Value="Blue"/>
+			<Setter Property="BorderThickness" Value="2"/>
+		</Style>
+	</Window.Resources>
     <Grid>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="158,-60,0,360" Width="840">
             <Button Click="AdaugaButton_Click" Content="ADAUGA" Background="#FFC2C2BB" Width="128" Margin="0,10" Height="40"/>
