--- a/Proiect/AddWindow.xaml
+++ b/Proiect/AddWindow.xaml
@@ -2,17 +2,6 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Add New RCA Record" Height="732" Width="600" Background="#FFD9E2E9">
-    <Window.Resources>
-        <Color x:Key="RowColor1">#F5F5F5</Color>
-        <Color x:Key="RowColor2">#FFFFFF</Color>
-
-        <Style x:Key="OddRowStyle" TargetType="Grid">
-            <Setter Property="Background" Value="{StaticResource RowColor1}" />
-        </Style>
-        <Style x:Key="EvenRowStyle" TargetType="Grid">
-            <Setter Property="Background" Value="{StaticResource RowColor2}" />
-        </Style>
-    </Window.Resources>
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid Margin="10" Height="702">
             <Grid.ColumnDefinitions>
@@ -74,7 +63,7 @@
             <Rectangle Fill="#D9E2E9" Grid.Row="21" Grid.ColumnSpan="4" Margin="0,28,0,0" Grid.RowSpan="2" />
 
             <TextBlock Text="Data Expirare Polita:" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="DataExpirarePolitaTextBox" Grid.Row="0" Grid.Column="3" Margin="5,5,5,5" />
+            <DatePicker Name="DataExpirarePolitaDatePicker" Grid.Row="0" Grid.Column="3" Margin="5,5,5,5" />
 
             <TextBlock Text="Numar Inmatriculare:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
             <TextBox Name="NumarInmatriculareTextBox" Grid.Row="1" Grid.Column="3" Margin="5,5,5,5" />
