--- a/Proiect/AddWindow2.xaml
+++ b/Proiect/AddWindow2.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Proiect.AddWindow2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Add New Insurance Record" Height="600" Width="450" Background="#FFBEE0F6">
+        Title="Add New Insurance Record" Height="600" Width="450" Background="#FFD9E2E9">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -28,6 +28,20 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
+        <Rectangle Fill="#D9E2E9" Grid.Row="0" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#EEEEEE" Grid.Row="1" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#D9E2E9" Grid.Row="2" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#EEEEEE" Grid.Row="3" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#D9E2E9" Grid.Row="4" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#EEEEEE" Grid.Row="5" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#D9E2E9" Grid.Row="6" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#EEEEEE" Grid.Row="7" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#D9E2E9" Grid.Row="8" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#EEEEEE" Grid.Row="9" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#D9E2E9" Grid.Row="10" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
+        <Rectangle Fill="#EEEEEE" Grid.Row="11" Grid.ColumnSpan="4" Margin="0,0,0,27" Grid.RowSpan="2" />
+        <Rectangle Fill="#D9E2E9" Grid.Row="12" Grid.ColumnSpan="4" Margin="0,27,0,0" Grid.RowSpan="2" />
+        
         <!-- Data Expirarii -->
         <TextBlock Text="Data Expirarii:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="DataExpirariiTextBox" Grid.Row="0" Grid.Column="1" Margin="5"/>
