repairing adding to database

--- a/Proiect/AddWindow2.xaml
+++ b/Proiect/AddWindow2.xaml
@@ -42,59 +42,45 @@
         <Rectangle Fill="#EEEEEE" Grid.Row="11" Grid.ColumnSpan="4" Margin="0,0,0,27" Grid.RowSpan="2" />
         <Rectangle Fill="#D9E2E9" Grid.Row="12" Grid.ColumnSpan="4" Margin="0,27,0,0" Grid.RowSpan="2" />
         
-        <!-- Data Expirarii -->
         <TextBlock Text="Data Expirarii:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
-        <TextBox Name="DataExpirariiTextBox" Grid.Row="0" Grid.Column="1" Margin="5"/>
+        <DatePicker Name="DataExpirariiDatePicker" Grid.Row="0" Grid.Column="1" Margin="5,5,5,5" />
 
-        <!-- CNP/CUI -->
         <TextBlock Text="CNP/CUI:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="CNP_CUITextBox" Grid.Row="1" Grid.Column="1" Margin="5"/>
 
-        <!-- Nume -->
         <TextBlock Text="Nume:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="NumeTextBox" Grid.Row="2" Grid.Column="1" Margin="5"/>
 
-        <!-- Prenume -->
         <TextBlock Text="Prenume:" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="PrenumeTextBox" Grid.Row="3" Grid.Column="1" Margin="5"/>
 
-        <!-- Adresa Asigurata -->
         <TextBlock Text="Adresa Asigurata:" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="Adresa_AsigurataTextBox" Grid.Row="4" Grid.Column="1" Margin="5"/>
 
-        <!-- Adresa De Domiciliu -->
         <TextBlock Text="Adresa De Domiciliu:" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="Adresa_De_DomiciliuTextBox" Grid.Row="5" Grid.Column="1" Margin="5"/>
 
-        <!-- Numar Telefon -->
         <TextBlock Text="Numar Telefon:" Grid.Row="6" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="NumarTelefonTextBox" Grid.Row="6" Grid.Column="1" Margin="5"/>
 
-        <!-- Suprafata (m2) -->
         <TextBlock Text="Suprafata (m2):" Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="Suprafata_m2TextBox" Grid.Row="7" Grid.Column="1" Margin="5"/>
 
-        <!-- An Constructie -->
         <TextBlock Text="An Constructie:" Grid.Row="8" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="An_ConstructieTextBox" Grid.Row="8" Grid.Column="1" Margin="5"/>
 
-        <!-- Numar Camere -->
         <TextBlock Text="Numar Camere:" Grid.Row="9" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="Nr_CamereTextBox" Grid.Row="9" Grid.Column="1" Margin="5"/>
 
-        <!-- Numar Etaje -->
         <TextBlock Text="Numar Etaje:" Grid.Row="10" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="Nr_EtajeTextBox" Grid.Row="10" Grid.Column="1" Margin="5"/>
 
-        <!-- Numar Cladiri La Aceeasi Adresa -->
         <TextBlock Text="Numar Cladiri La Aceeasi Adresa:" Grid.Row="11" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="Nr_Cladiri_La_Aceeasi_AdresaTextBox" Grid.Row="11" Grid.Column="1" Margin="5"/>
 
-        <!-- Material Constructie -->
         <TextBlock Text="Material Constructie:" Grid.Row="12" Grid.Column="0" VerticalAlignment="Center" Margin="5"/>
         <TextBox Name="Material_ConstructieTextBox" Grid.Row="12" Grid.Column="1" Margin="5"/>
 
-        <!-- OK and Cancel Buttons -->
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="13" Grid.ColumnSpan="2" Margin="0,10,0,0">
             <Button Content="OK" Width="75" Margin="5" Click="OKButton_Click"/>
             <Button Content="Cancel" Width="75" Margin="5" Click="CancelButton_Click"/>
