--- a/Proiect/AddWindow.xaml
+++ b/Proiect/AddWindow.xaml
@@ -1,15 +1,9 @@
 ﻿<Window x:Class="Proiect.AddWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Add New RCA Record" Height="732" Width="600" Background="#FFD9E2E9">
+        Title="Add New RCA Record" Height="599" Width="530" Background="#FFD9E2E9">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <Grid Margin="10" Height="702">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="175*" />
-                <ColumnDefinition Width="48*"/>
-                <ColumnDefinition Width="28*" />
-                <ColumnDefinition Width="312*" />
-            </Grid.ColumnDefinitions>
+        <Grid Margin="10">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -38,6 +32,11 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
+	        <Grid.ColumnDefinitions>
+		        <ColumnDefinition Width="Auto"/>
+		        <ColumnDefinition Width="*"/>
+	        </Grid.ColumnDefinitions>
+
             <Rectangle Fill="#D9E2E9" Grid.Row="0" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
             <Rectangle Fill="#EEEEEE" Grid.Row="1" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
             <Rectangle Fill="#D9E2E9" Grid.Row="2" Grid.ColumnSpan="4" Margin="0,0,0,28" Grid.RowSpan="2" />
@@ -62,76 +61,76 @@
             <Rectangle Fill="#EEEEEE" Grid.Row="20" Grid.ColumnSpan="4" Margin="0,28,0,0" Grid.RowSpan="2" />
             <Rectangle Fill="#D9E2E9" Grid.Row="21" Grid.ColumnSpan="4" Margin="0,28,0,0" Grid.RowSpan="2" />
 
-            <TextBlock Text="Data Expirare Polita:" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <DatePicker Name="DataExpirarePolitaDatePicker" Grid.Row="0" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Data Expirare Polita:" Grid.Column="0" VerticalAlignment="Center" />
+            <DatePicker Name="DataExpirarePolitaDatePicker" Grid.Row="0" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Numar Inmatriculare:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="NumarInmatriculareTextBox" Grid.Row="1" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Numar Inmatriculare:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="NumarInmatriculareTextBox" Grid.Row="1" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Serie Sasiu:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
+            <TextBlock Text="Serie Sasiu:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" />
             <TextBox Name="SerieSasiuTextBox" Grid.Row="2" Grid.Column="3" Margin="5,5,5,5" />
 
-            <TextBlock Text="CNP/CUI:" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="CnpCuiTextBox" Grid.Row="3" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="CNP/CUI:" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="CnpCuiTextBox" Grid.Row="3" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Nume:" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="NumeTextBox" Grid.Row="4" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Nume:" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center"/>
+            <TextBox Name="NumeTextBox" Grid.Row="4" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Prenume:" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="PrenumeTextBox" Grid.Row="5" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Prenume:" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center"/>
+            <TextBox Name="PrenumeTextBox" Grid.Row="5" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Judet:" Grid.Row="6" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="JudetTextBox" Grid.Row="6" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Judet:" Grid.Row="6" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="JudetTextBox" Grid.Row="6" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Localitate:" Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="LocalitateTextBox" Grid.Row="7" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Localitate:" Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="LocalitateTextBox" Grid.Row="7" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Adresa:" Grid.Row="8" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="AdresaTextBox" Grid.Row="8" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Adresa:" Grid.Row="8" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="AdresaTextBox" Grid.Row="8" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Data Obtinere Permis:" Grid.Row="9" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="DataObtinerePermisTextBox" Grid.Row="9" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Data Obtinere Permis:" Grid.Row="9" Grid.Column="0" VerticalAlignment="Center" />
+            <DatePicker Name="DataObtinerePermisDatePicker" Grid.Row="9" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Marca:" Grid.Row="10" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="MarcaTextBox" Grid.Row="10" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Marca:" Grid.Row="10" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="MarcaTextBox" Grid.Row="10" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Capacitate Cilindrica:" Grid.Row="11" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="CapacitateCilindricaTextBox" Grid.Row="11" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Capacitate Cilindrica:" Grid.Row="11" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="CapacitateCilindricaTextBox" Grid.Row="11" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Numar Locuri:" Grid.Row="12" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="NrLocuriTextBox" Grid.Row="12" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Numar Locuri:" Grid.Row="12" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="NrLocuriTextBox" Grid.Row="12" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Masa Maxima Autorizata:" Grid.Row="13" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="MasaMaximaAutorizataTextBox" Grid.Row="13" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Masa Maxima Autorizata:" Grid.Row="13" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="MasaMaximaAutorizataTextBox" Grid.Row="13" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Putere Motor (kW):" Grid.Row="14" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="PutereMotorKwTextBox" Grid.Row="14" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Putere Motor (kW):" Grid.Row="14" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="PutereMotorKwTextBox" Grid.Row="14" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Tip Combustibil:" Grid.Row="15" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="TipCombustibilTextBox" Grid.Row="15" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Tip Combustibil:" Grid.Row="15" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="TipCombustibilTextBox" Grid.Row="15" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Model:" Grid.Row="16" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="ModelTextBox" Grid.Row="16" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Model:" Grid.Row="16" Grid.Column="0" VerticalAlignment="Center"/>
+            <TextBox Name="ModelTextBox" Grid.Row="16" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Serie CIV:" Grid.Row="17" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="SerieCivTextBox" Grid.Row="17" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Serie CIV:" Grid.Row="17" Grid.Column="0" VerticalAlignment="Center"  />
+            <TextBox Name="SerieCivTextBox" Grid.Row="17" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="An Fabricatie:" Grid.Row="18" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="AnFabricatieTextBox" Grid.Row="18" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="An Fabricatie:" Grid.Row="18" Grid.Column="0" VerticalAlignment="Center" />
+            <TextBox Name="AnFabricatieTextBox" Grid.Row="18" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Numar Kilometri:" Grid.Row="19" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="NrKmTextBox" Grid.Row="19" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Numar Kilometri:" Grid.Row="19" Grid.Column="0" VerticalAlignment="Center"  />
+            <TextBox Name="NrKmTextBox" Grid.Row="19" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Data Primei Inmatriculari:" Grid.Row="20" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="DataPrimeiInmatriculariTextBox" Grid.Row="20" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Data Primei Inmatriculari:" Grid.Row="20" Grid.Column="0" VerticalAlignment="Center" />
+            <DatePicker Name="DataPrimeiInmatriculariDatePicker" Grid.Row="20" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Data Expirare ITP:" Grid.Row="21" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="DataExpirareITPTextBox" Grid.Row="21" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Data Expirare ITP:" Grid.Row="21" Grid.Column="0" VerticalAlignment="Center"  />
+            <DatePicker Name="DataExpirareITPDatePicker" Grid.Row="21" Grid.Column="1" Margin="5,5,5,5" />
 
-            <TextBlock Text="Numar telefon:" Grid.Row="22" Grid.Column="0" VerticalAlignment="Center" Grid.ColumnSpan="4" />
-            <TextBox Name="NumarTelefonTextBox" Grid.Row="22" Grid.Column="3" Margin="5,5,5,5" />
+            <TextBlock Text="Numar telefon:" Grid.Row="22" Grid.Column="0" VerticalAlignment="Center"/>
+            <TextBox Name="NumarTelefonTextBox" Grid.Row="22" Grid.Column="1" Margin="5,5,5,5" />
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="23" Margin="0,10,0,0" Grid.Column="3">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="23" Margin="0,10,0,0" Grid.Column="1">
                 <Button Content="OK" Width="75" Margin="5" Click="OKButton_Click" />
                 <Button Content="Cancel" Width="75" Margin="5" Click="CancelButton_Click" />
             </StackPanel>
