--- a/Proiect/MainWindow.xaml
+++ b/Proiect/MainWindow.xaml
@@ -21,7 +21,7 @@
             <ColumnDefinition Width="753*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="69,-60,0,360" Width="840" Grid.Column="3">
-            <Button Click="AdaugaButton_Click" Content="ADAUGA" Background="#FFC2C2BB" Width="163" Margin="0,10" Height="40"/>
+            <Button Name="AdaugaButton" Click="AdaugaButton_Click" Content="ADAUGA" Background="#FFC2C2BB" Width="163" Margin="0,10" Height="40"/>
             <Button Click="EditeazaButton_Click" Content="EDITEAZA" Background="#FFC2C2BB" Width="184" Margin="0,10" Height="40"/>
             <Button Click="CautaButton_Click" Content="CAUTA" Background="#FFC2C2BB" Width="177" Margin="0,10" Height="40"/>
             <Button Click="StergeButton_Click" Content="STERGE" Background="#FFC2C2BB" Width="147" Height="40"/>
